2005-04-01	Christian Hergert	<christian.hergert@gmail.com>

	* Commands/VBConverter/ConvertBuffer.cs: Convert to use new Logging
	framework.
	* Commands/MenuItemBuilders.cs
	* Commands/AutostartCommands.cs
	* Services/DefaultLoggingService.cs
	* Services/DispatchService/DispatchService.cs
	* Services/ILoggingService.cs: New logging service to help make debugging
	and information logging easy.
	* Services/Runtime.cs: Add logging service to Runtime.
	* Services/DisplayBinding/DisplayBindingService.cs: Convert to new Logging
	framework.
	* Services/ResourceService.cs
	* Services/ParserService/DefaultParserService.cs
	* Services/ParserService/AssemblyInformation.cs
	* Services/ParserService/AssemblyCodeCompletionDatabase.cs
	* Services/ParserService/CodeCompletionDatabase.cs
	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs
	* Gui/Workbench/DefaultWorkbench.cs
	* Gui/Dialogs/Wizard/WizardDialog.cs
	* Gui/Dialogs/Wizard/AbstractWizardPanel.cs
	* Gui/Dialogs/WordCountDialog.cs
	* Gui/Dialogs/NewFileDialog.cs
	* Gui/Dialogs/ReferenceDialog/AssemblyReferencePanel.cs
	* Gui/Dialogs/ReferenceDialog/GacReferencePanel.cs
	* Gui/Pads/SolutionPad/TreeViewPad.cs
	* Gui/Pads/PropertyPad/PropertyPad.cs
	* Gui/Pads/ProjectBrowser/BrowserNode/ProjectBrowserNode.cs
	* Gui/Pads/ProjectBrowser/BrowserNode/DirectoryNode.cs
	* Gui/Pads/ProjectBrowser/NodeBuilder/DefaultDotNetNodeBuilder.cs
	* Gui/Pads/HelpBrowser/MonodocTreePad.cs
	* Gui/Pads/HelpBrowser/HelpViewer.cs
	* Gui/Pads/FileScout/FileList.cs
	* Gui/BrowserDisplayBinding/HtmlViewPane.cs
	* Gui/HtmlControl/HtmlControl.cs
	* Gui/HtmlControl/MozillaControl.cs
	* Makefile.am: Add new LoggingService files to build files
	* Internal/ExternalTool/ToolLoader.cs: Update to new Logging Service
	framework.
	* Internal/Project/Project/DotNetProject.cs
	* Internal/Project/Project/IncludeFilesDialog.cs
	* Internal/Project/Project/Project.cs
	* Internal/Project/Combine/Combine.cs
	* Internal/ProgressMonitoring/ConsoleProgressMonitor.cs