@@ -20,164 +20,166 @@ namespace MonoDevelop.Services
 		{
 			base.InitializeService();
 		}
-		
-		ILog GetLogger(System.Type type)
-		{
-			return LogManager.GetLogger(type);
-		}
 
 		ILog GetLogger()
 		{
-			return LogManager.GetLogger(System.Reflection.MethodBase.GetCurrentMethod().DeclaringType);
-		}
-
-		System.Reflection.MethodBase GetCallingMethod()
-		{
-			System.Diagnostics.StackTrace
-					trace = new System.Diagnostics.StackTrace(true);
-			return trace.GetFrame(2).GetMethod();
+			return LogManager.GetLogger(typeof(ILoggingService));
 		}
 
 		public bool IsDebugEnabled {
 			get {
-				return GetLogger(GetCallingMethod().DeclaringType).IsDebugEnabled;
+				return GetLogger().IsDebugEnabled;
 			}
 		}
 
 		public bool IsInfoEnabled {
 			get {
-				return GetLogger(GetCallingMethod().DeclaringType).IsInfoEnabled;
+				return GetLogger().IsInfoEnabled;
 			}
 		}
 
 		public bool IsWarnEnabled {
 			get {
-				return GetLogger(GetCallingMethod().DeclaringType).IsWarnEnabled;
+				return GetLogger().IsWarnEnabled;
 			}
 		}
 
 		public bool IsErrorEnabled {
 			get {
-				return GetLogger(GetCallingMethod().DeclaringType).IsErrorEnabled;
+				return GetLogger().IsErrorEnabled;
 			}
 		}
 
 		public bool IsFatalEnabled {
 			get {
-				return GetLogger(GetCallingMethod().DeclaringType).IsFatalEnabled;
+				return GetLogger().IsFatalEnabled;
 			}
 		}
 
 		public void Debug (object message)
 		{
-			System.Type type = GetCallingMethod().DeclaringType;
-			GetLogger(type).Debug (message);
-			OnLogAppended ("Debug", type.ToString(), message.ToString());
+			GetLogger().Debug (message);
+			OnLogAppended ("Debug", message.ToString());
 		}
 
 		public void Info (object message)
 		{
-			System.Type type = GetCallingMethod().DeclaringType;
-			GetLogger(type).Info (message);
-			OnLogAppended ("Info", type.ToString(), message.ToString());
+			GetLogger().Info (message);
+			OnLogAppended ("Info", message.ToString());
 		}
 
 		public void Warn (object message)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).Warn (message);
+			GetLogger().Warn (message);
+			OnLogAppended ("Warn", message.ToString());
 		}
 
 		public void Error (object message)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).Error (message);
+			GetLogger().Error (message);
 		}
 
 		public void Fatal (object message)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).Fatal (message);
+			GetLogger().Fatal (message);
+			OnLogAppended ("Fatal", message.ToString());
 		}
 
 		public void Debug (object message, Exception t)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).Debug (message, t);
+			GetLogger().Debug (message, t);
+			OnLogAppended ("Debug", message + t.ToString());
 		}
 		
 		public void Info (object message, Exception t)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).Info (message, t);
+			GetLogger().Info (message, t);
+			OnLogAppended ("Info", message + t.ToString());
 		}
 		
 		public void Warn (object message, Exception t)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).Warn (message, t);
+			GetLogger().Warn (message, t);
+			OnLogAppended ("Warn", message + t.ToString());
 		}
 
 		public void Error (object message, Exception t)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).Error (message, t);
+			GetLogger().Error (message, t);
+			OnLogAppended ("Error", message + t.ToString());
 		}
 		
 		public void Fatal (object message, Exception t)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).Fatal (message, t);
+			GetLogger().Fatal (message, t);
+			OnLogAppended ("Fatal", message + t.ToString());
 		}
 
 		public void DebugFormat (string format, params object[] args)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).DebugFormat (format, args);
+			GetLogger().DebugFormat (format, args);
+			OnLogAppended ("Debug", String.Format(format, args));
 		}
 		
 		public void InfoFormat (string format, params object[] args)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).InfoFormat (format, args);
+			GetLogger().InfoFormat (format, args);
+			OnLogAppended ("Info", String.Format(format, args));
 		}
 		
 		public void WarnFormat (string format, params object[] args)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).WarnFormat (format, args);
+			GetLogger().WarnFormat (format, args);
+			OnLogAppended ("Warn", String.Format(format, args));
 		}
 		
 		public void ErrorFormat (string format, params object[] args)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).ErrorFormat (format, args);
+			GetLogger().ErrorFormat (format, args);
+			OnLogAppended ("Error", String.Format(format, args));
 		}
 		
 		public void FatalFormat (string format, params object[] args)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).FatalFormat (format, args);
+			GetLogger().FatalFormat (format, args);
+			OnLogAppended ("Fatal", String.Format(format, args));
 		}
 
 		public void DebugFormat(IFormatProvider provider, string format, params object[] args)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).DebugFormat (provider, format, args);
+			GetLogger().DebugFormat (provider, format, args);
+			OnLogAppended ("Debug", String.Format(provider, format, args));
 		}
 		
 		public void InfoFormat(IFormatProvider provider, string format, params object[] args)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).InfoFormat (provider, format, args);
+			GetLogger().InfoFormat (provider, format, args);
+			OnLogAppended ("Info", String.Format(provider, format, args));
 		}
 
 		public void WarnFormat(IFormatProvider provider, string format, params object[] args)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).WarnFormat (provider, format, args);
+			GetLogger().WarnFormat (provider, format, args);
+			OnLogAppended ("Warn", String.Format(provider, format, args));
 		}
 
 		public void ErrorFormat(IFormatProvider provider, string format, params object[] args)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).ErrorFormat (provider, format, args);
+			GetLogger().ErrorFormat (provider, format, args);
+			OnLogAppended ("Error", String.Format(provider, format, args));
 		}
 
 		public void FatalFormat(IFormatProvider provider, string format, params object[] args)
 		{
-			GetLogger(GetCallingMethod().DeclaringType).FatalFormat (provider, format, args);
+			GetLogger().FatalFormat (provider, format, args);
+			OnLogAppended ("Fatal", String.Format(provider, format, args));
 		}
 
-		public void OnLogAppended(string level, string category, string message)
+		public void OnLogAppended(string level, string message)
 		{
 			if (LogAppended != null) {
 				LogAppendedArgs args = new LogAppendedArgs();
 				args.Level = level;
-				args.Category = category;
 				args.Message = message;
 				args.Timestamp = DateTime.Now;
 				LogAppended(this, args);
